--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -7,11 +7,12 @@ on:
 
 jobs:
   public_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Public Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active') }}
     with:
+      cloud: Azure
       test_name: Public Active/Active
       utility_test: false
       is_legacy_deployment: false
@@ -23,11 +24,12 @@ jobs:
       TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
 
   private_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active') }}
     with:
+      cloud: Azure
       test_name: Private Active/Active
       utility_test: false
       is_legacy_deployment: false
@@ -39,11 +41,12 @@ jobs:
       TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
 
   private_tcp_active_active:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private TCP Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active') }}
     with:
+      cloud: Azure
       test_name: Private TCP Active/Active
       utility_test: false
       is_legacy_deployment: false
@@ -55,11 +58,12 @@ jobs:
       TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
 
   standalone_external:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone External
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external') }}
     with:
+      cloud: Azure
       test_name: Standalone External
       utility_test: false
       is_legacy_deployment: false
@@ -78,11 +82,12 @@ jobs:
         }\n/'
 
   standalone_mounted_disk:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone Mounted Disk
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk') }}
     with:
+      cloud: Azure
       test_name: Standalone Mounted Disk
       utility_test: false
       is_legacy_deployment: false
@@ -101,11 +106,12 @@ jobs:
         }\n/'
 
   public_active_active_legacy:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Public Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active-legacy') }}
     with:
+      cloud: Azure
       test_name: Public Active/Active
       utility_test: true
       is_legacy_deployment: true
@@ -118,11 +124,12 @@ jobs:
       TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-legacy/
 
   private_active_active_legacy:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active-legacy') }}
     with:
+      cloud: Azure
       test_name: Private Active/Active
       utility_test: true
       is_legacy_deployment: true
@@ -135,11 +142,12 @@ jobs:
       TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-legacy/
 
   private_tcp_active_active_legacy:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Private TCP Active/Active
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active-legacy') }}
     with:
+      cloud: Azure
       test_name: Private TCP Active/Active
       utility_test: true
       is_legacy_deployment: true
@@ -152,11 +160,12 @@ jobs:
       TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-legacy/
 
   standalone_external_legacy:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone External
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external-legacy') }}
     with:
+      cloud: Azure
       test_name: Standalone External
       utility_test: true
       is_legacy_deployment: true
@@ -175,11 +184,12 @@ jobs:
         }\n/'
 
   standalone_mounted_disk_legacy:
-    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/azure-destroy.yml@ah/tf-5370
+    uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
     name: Destroy resources from Azure Standalone Mounted Disk
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk-legacy') }}
     with:
+      cloud: Azure
       test_name: Standalone Mounted Disk
       utility_test: true
       is_legacy_deployment: true
