--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -108,11 +108,11 @@ jobs:
   public_active_active_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
-    name: Destroy resources from Azure Public Active/Active
+    name: Destroy resources from Azure Public Active/Active (Legacy)
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'public-active-active-legacy') }}
     with:
       cloud: Azure
-      test_name: Public Active/Active
+      test_name: Public Active/Active (Legacy)
       utility_test: true
       is_legacy_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -120,17 +120,17 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/public-active-active
-      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_TFC_TOKEN
+      TFC_token_secret_name: PUBLIC_ACTIVE_ACTIVE_LEGACY_TFC_TOKEN
       TFC_workspace_substitution_pattern: s/azure-public-active-active/azure-public-active-active-legacy/
 
   private_active_active_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
-    name: Destroy resources from Azure Private Active/Active
+    name: Destroy resources from Azure Private Active/Active (Legacy)
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-active-active-legacy') }}
     with:
       cloud: Azure
-      test_name: Private Active/Active
+      test_name: Private Active/Active (Legacy)
       utility_test: true
       is_legacy_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -138,17 +138,17 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/private-active-active
-      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_TFC_TOKEN
+      TFC_token_secret_name: PRIVATE_ACTIVE_ACTIVE_LEGACY_TFC_TOKEN
       TFC_workspace_substitution_pattern: s/azure-private-active-active/azure-private-active-active-legacy/
 
   private_tcp_active_active_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
-    name: Destroy resources from Azure Private TCP Active/Active
+    name: Destroy resources from Azure Private TCP Active/Active (Legacy)
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'private-tcp-active-active-legacy') }}
     with:
       cloud: Azure
-      test_name: Private TCP Active/Active
+      test_name: Private TCP Active/Active (Legacy)
       utility_test: true
       is_legacy_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -156,17 +156,17 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/private-tcp-active-active
-      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_TFC_TOKEN
+      TFC_token_secret_name: PRIVATE_TCP_ACTIVE_ACTIVE_LEGACY_TFC_TOKEN
       TFC_workspace_substitution_pattern: s/azure-private-tcp-active-active/azure-private-tcp-active-active-legacy/
 
   standalone_external_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
-    name: Destroy resources from Azure Standalone External
+    name: Destroy resources from Azure Standalone External (Legacy)
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-external-legacy') }}
     with:
       cloud: Azure
-      test_name: Standalone External
+      test_name: Standalone External (Legacy)
       utility_test: true
       is_legacy_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -174,7 +174,7 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/standalone-external
-      TFC_token_secret_name: STANDALONE_EXTERNAL_TFC_TOKEN
+      TFC_token_secret_name: STANDALONE_EXTERNAL_LEGACY_TFC_TOKEN
       TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
         backend "remote" {\n\
           organization = "terraform-enterprise-modules-test"\n\
@@ -186,11 +186,11 @@ jobs:
   standalone_mounted_disk_legacy:
     uses: hashicorp/terraform-random-tfe-utility/.github/workflows/destroy.yml@ah/tf-5370
     secrets: inherit
-    name: Destroy resources from Azure Standalone Mounted Disk
+    name: Destroy resources from Azure Standalone Mounted Disk (Legacy)
     if: ${{ contains(github.event.client_payload.slash_command.args.unnamed.all, 'all') || contains(github.event.client_payload.slash_command.args.unnamed.all, 'standalone-mounted-disk-legacy') }}
     with:
       cloud: Azure
-      test_name: Standalone Mounted Disk
+      test_name: Standalone Mounted Disk (Legacy)
       utility_test: true
       is_legacy_deployment: true
       module_repository_id: hashicorp/terraform-azurerm-terraform-enterprise
@@ -198,7 +198,7 @@ jobs:
       pull_request_ref: ${{ github.event.client_payload.pull_request.head.sha }}
       pull_request_comment_id: ${{ github.event.client_payload.github.payload.comment.id }}
       work_dir: ./tests/standalone-mounted-disk
-      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_TFC_TOKEN
+      TFC_token_secret_name: STANDALONE_MOUNTED_DISK_LEGACY_TFC_TOKEN
       TFC_workspace_substitution_pattern: 's/terraform {/terraform {\n\
         backend "remote" {\n\
           organization = "terraform-enterprise-modules-test"\n\
